<resources>
    <string name="app_name">HeyTaksi</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="sign_in">Üye Ol</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- labels -->
    <string name="name">Ad</string>
    <string name="lastname">Soyad</string>
    <string name="birthday">Doğum Tarihi</string>
    <string name="email">Email</string>
    <string name="phone">Tel</string>
    <string name="plate">Plaka</string>
    <string name="user_type">Kullanıcı Tipi</string>
    <string name="user">Kullanıcı</string>
    <string name="taxi_driver">Taksici</string>
    <string name="signin">Kayıt Ol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
