<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="50dp">

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="@color/ed_bg"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@color/ed_bg"
            android:padding="5dp"
            android:layout_marginBottom="5dp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            fbutton:buttonColor="@color/white"
            fbutton:cornerRadius="5dp"
            fbutton:shadowColor="@color/selected_white"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="3dp"
            android:layout_marginBottom="5dp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            fbutton:buttonColor="@color/white"
            fbutton:cornerRadius="5dp"
            fbutton:shadowColor="@color/selected_white"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="3dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</RelativeLayout>
