<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ismek.heytaksi.SignInActivity"
    android:background="@color/bg_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/ed_bg"
                    android:padding="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lastname"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edLastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/ed_bg"
                    android:padding="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthday"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edBirthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/ed_bg"
                    android:padding="5dp"
                    android:inputType="date"
                    android:hint="dd.MM.yyyy"/>
                <!--<DatePicker
                    android:id="@+id/dpBirthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="5dp"/> -->

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/ed_bg"
                    android:padding="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/ed_bg"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/ed_bg"
                    android:padding="5dp"
                    android:inputType="phone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_type"
                    android:textStyle="bold"/>
                <RadioGroup
                    android:id="@+id/rgUserType"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/rbTaxiDriver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taxi_driver"/>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plate"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edPlate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/ed_bg"
                    android:padding="5dp"/>
            </LinearLayout>

            <info.hoang8f.widget.FButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                fbutton:buttonColor="@color/white"
                fbutton:cornerRadius="5dp"
                fbutton:shadowColor="@color/selected_white"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="3dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
